# cliairplay

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.binary  Makefile.am  README.md  cliap2.conf.in  configure.ac  owntone.conf.in
.github/action/: build_action.yml
.github/workflows/: build.yml
m4/: .gitignore
patches/: ffmpeg8.patch
src/: Makefile.am  airplay.c  airplay_events.c  cliap  cliap.c  cliap.h  cliap2.c  cliap2.h  conffile.c  conffile.h  evrtsp.h  input.c  logger.c  mass.c  mass.h  misc.c  misc.h  outputs.c  player.c  player.h  rtp_common.c  rtp_common.h  rtsp.c  timer.c  transcode.c  transcode.h  wrappers.c  wrappers.h
tools/: README.md  tool.sed  tool.sh
